@@ -494,9 +494,9 @@ class sdf_tests(unittest.TestCase):
         project.sessions[0].drx_beam = 6
         self.assertFalse(project.validate())
         
-        # No beam
+        # No beam (this is allowed now)
         project.sessions[0].drx_beam = -1
-        self.assertFalse(project.validate())
+        self.assertTrue(project.validate())
         
         # Bad filter
         project.sessions[0].observations[0].filter = 10
@@ -589,9 +589,9 @@ class sdf_tests(unittest.TestCase):
         project.sessions[0].drx_beam = 6
         self.assertFalse(project.validate())
         
-        # No beam
+        # No beam (this is allowed now)
         project.sessions[0].drx_beam = -1
-        self.assertFalse(project.validate())
+        self.assertTrue(project.validate())
         
         # Bad filter
         project.sessions[0].observations[0].filter = 10
@@ -673,9 +673,9 @@ class sdf_tests(unittest.TestCase):
         project.sessions[0].drx_beam = 6
         self.assertFalse(project.validate())
         
-        # No beam
+        # No beam (this is allowed now)
         project.sessions[0].drx_beam = -1
-        self.assertFalse(project.validate())
+        self.assertTrue(project.validate())
         
         # Bad filter
         project.sessions[0].observations[0].filter = 10
@@ -821,9 +821,9 @@ class sdf_tests(unittest.TestCase):
         project.sessions[0].drx_beam = 6
         self.assertFalse(project.validate())
         
-        # No beam
+        # No beam (this is allowed now)
         project.sessions[0].drx_beam = -1
-        self.assertFalse(project.validate())
+        self.assertTrue(project.validate())
         
         # Bad filter
         project.sessions[0].observations[0].filter = 10
